# imagecli

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  GUIDE.md  GUIDE_template.txt  LICENSE.md  Mayhemfile  README.md  README_template.txt
.github/workflows/: mayhem.yml
benches/: benchmark.rs
src/: error.rs  example.rs  expr.rs  image_ops.rs  lib.rs  main.rs  op.rs  output_spec.rs  parse_utils.rs  stack.rs  stack_ops.rs  stage.rs
src/documentation/: markdown.rs  mod.rs  stack_diagram.rs  template.rs
tests/: test.rs
